--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.1.0",
-    "file-loader": "6.1.1",
     "firebase": "^8.2.1",
     "fs-extra": "^9.0.1",
     "identity-obj-proxy": "3.0.0",
@@ -93,6 +92,7 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
+    "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.11.3",
     "postcss": "^8.2.1",
@@ -100,6 +100,7 @@
     "react-hot-loader": "^4.13.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.3.0",
+    "svg-inline-loader": "^0.8.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
